--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -25,13 +25,17 @@
         </activity>
 
         <service
-            android:name="io.ahimsa.ahimsa_app.application.service.NodeService"
+            android:name="io.ahimsa.ahimsa_app.application.service.BootlegNodeService"
             android:enabled="true"
             android:exported="false" >
         </service>
-
         <service
             android:name="io.ahimsa.ahimsa_app.application.service.OldNodeService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+        <service
+            android:name="io.ahimsa.ahimsa_app.application.service.NodeService"
             android:enabled="true"
             android:exported="false" >
         </service>
