--- a/application/build.gradle
+++ b/application/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 1
-        versionName ".0000001"
+        versionName "1 Satoshi"
     }
     buildTypes {
         release {
@@ -21,5 +21,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:19.+'
-    compile 'com.google:bitcoinj:0.11.2'
+    compile 'com.google:bitcoinj:0.11.3'
 }
