--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="io.ahimsa.ahimsa_app.ui.MainActivity"
+            android:name=".ui.AhimsaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
         <activity
             android:name="io.ahimsa.ahimsa_app.ui.CreateBulletinActivity"
             android:label="@string/create_bulletin"
-            android:parentActivityName="io.ahimsa.ahimsa_app.ui.MainActivity"
+            android:parentActivityName=".ui.AhimsaActivity"
             android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
