--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ui.AhimsaActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,7 @@
 
         <activity
             android:name="io.ahimsa.ahimsa_app.ui.CreateBulletinActivity"
+            android:screenOrientation="portrait"
             android:label="@string/create_bulletin"
             android:parentActivityName=".ui.AhimsaActivity"
             android:windowSoftInputMode="stateVisible">
