--- a/application/build.gradle
+++ b/application/build.gradle
@@ -20,8 +20,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    //    compile 'com.android.support:appcompat-v7:19.+'
+
     compile 'com.google:bitcoinj:0.11.3'
     compile 'com.android.support:support-v13:18.0.+'
     compile 'com.android.support:appcompat-v7:19.+'
+
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
