--- a/application/build.gradle
+++ b/application/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
 
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.google.zxing:core:3.1.0'
 }
