--- a/application/build.gradle
+++ b/application/build.gradle
@@ -8,23 +8,23 @@ android {
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 1
-        versionName "v3"
+        versionName "v0.0.3"
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            zipAlign true
         }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    compile 'com.google:bitcoinj:0.11.3'
     compile 'com.android.support:support-v13:18.0.+'
     compile 'com.android.support:appcompat-v7:19.+'
 
+    compile 'com.google:bitcoinj:0.11.3'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.google.zxing:core:3.1.0'
 }
