--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.ahimsa.ahimsa_app">
+    package="io.ahimsa.ahimsa_app"
+    android:installLocation="internalOnly">
+
+    <uses-sdk android:minSdkVersion="15"
+              android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
     <application
         android:name="io.ahimsa.ahimsa_app.AhimsaApplication"
