--- a/application/build.gradle
+++ b/application/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 1
-        versionName "v0.0.3"
+        versionCode 4
+        versionName "0.0.3"
     }
     buildTypes {
         release {
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:18.0.+'
     compile 'com.android.support:appcompat-v7:19.+'
 
