--- a/application/build.gradle
+++ b/application/build.gradle
@@ -20,11 +20,19 @@ android {
 }
 
 dependencies {
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:18.0.+'
     compile 'com.android.support:appcompat-v7:19.+'
 
-    compile 'com.google:bitcoinj:0.11.3'
+    compile files('libs/bitcoinj-0.12-bundled (8-6-14).jar')
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.google.zxing:core:3.1.0'
+
+//    compile 'com.github.tony19:logback-android-classic:1.1.1-3'
+//    compile 'com.github.tony19:logback-android-core:1.1.1-3'
+
+//    compile 'org.slf4j:slf4j-android:1.7.7'
+//    compile 'com.google.protobuf:protobuf-java:2.5.0'
+//    compile 'com.google.guava:guava:17.0'
+//    compile 'com.google.code.findbugs:annotations:3.0.0'
 }
