--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.ahimsa.ahimsa_app"
-    android:installLocation="internalOnly">
+    android:installLocation="internalOnly" >
 
-    <uses-sdk android:minSdkVersion="15"
-              android:targetSdkVersion="19" />
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -23,25 +24,25 @@
         android:allowBackup="false"
         android:icon="@drawable/ahimsa_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".ui.AhimsaActivity"
+            android:name="io.ahimsa.ahimsa_app.ui.AhimsaActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="io.ahimsa.ahimsa_app.ui.CreateBulletinActivity"
-            android:screenOrientation="portrait"
             android:label="@string/create_bulletin"
-            android:parentActivityName=".ui.AhimsaActivity"
-            android:windowSoftInputMode="stateVisible">
+            android:parentActivityName="io.ahimsa.ahimsa_app.ui.AhimsaActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -58,6 +59,10 @@
             android:exported="false" >
         </service>
 
+        <activity
+            android:name="io.ahimsa.ahimsa_app.ui.SettingsActivity2"
+            android:label="@string/title_activity_settings_activity2" >
+        </activity>
     </application>
 
 </manifest>
